--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ComtradeSuperheroes</string>
+    <string name="comics_name">Comics</string>
+    <string name="tv_shows_name">TV Shows</string>
+    <string name="stories_name">Stories</string>
 </resources>
